--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -153,7 +153,7 @@
               (click)="saveNewEditedAnswer()"
               class="flow"
             >
-              <ion-icon name="save" slot="icon-only"></ion-icon>
+              <ion-icon name="save-outline" slot="icon-only"></ion-icon>
             </ion-button>
 
             <ion-button
@@ -193,12 +193,13 @@
                 (click)="editSavedAnswer(ans.id)"
                 slot="end"
                 size="small"
+                fill="clear"
               >
-                <ion-icon name="create" slot="icon-only"></ion-icon>
+                <ion-icon name="create-outline"  slot="icon-only"></ion-icon>
               </ion-button>
               <!--  -->
-              <ion-button (click)="removeAnswer(ans.id)" slot="end"
-                ><ion-icon name="trash" slot="icon-only" fill="clear"></ion-icon
+              <ion-button (click)="removeAnswer(ans.id)" slot="end" color="danger" fill="clear"
+                ><ion-icon name="trash-outline" slot="icon-only" ></ion-icon
               ></ion-button>
             </ion-item>
 
@@ -215,11 +216,11 @@
               <ion-label>{{ ans.text_translations.en }}</ion-label>
               <!-- EDIT THE SAVED ANSWER BUTTON IN ENGLISH-->
               <ion-button (click)="editSavedAnswer(ans.id)" slot="end">
-                <ion-icon name="create" slot="icon-only"></ion-icon>
+                <ion-icon name="create-outline" slot="icon-only"></ion-icon>
               </ion-button>
               <!--  -->
-              <ion-button (click)="removeAnswer(ans.id)" slot="end"
-                ><ion-icon name="trash" slot="icon-only" fill="clear"></ion-icon
+              <ion-button (click)="removeAnswer(ans.id)" slot="end" color="danger" fill="clear"
+                ><ion-icon name="trash-outline" slot="icon-only" ></ion-icon
               ></ion-button>
             </ion-item>
           </div>
