--- a/src/app/home/edit-modal/edit-modal.component.html
+++ b/src/app/home/edit-modal/edit-modal.component.html
@@ -129,7 +129,7 @@
             (click)="saveNewEditedAnswer()"
             class="flow"
           >
-            <ion-icon name="save" slot="icon-only"></ion-icon>
+            <ion-icon name="save-outline" slot="icon-only"></ion-icon>
           </ion-button>
 
           <ion-button
@@ -170,12 +170,13 @@
               (click)="editSavedAnswer(ans.id)"
               slot="end"
               size="small"
+              fill="clear"
             >
-              <ion-icon name="create" slot="icon-only"></ion-icon>
+              <ion-icon name="create-outline" s slot="icon-only"></ion-icon>
             </ion-button>
             <!--  -->
-            <ion-button (click)="removeAnswer(ans.id)" slot="end"
-              ><ion-icon name="trash" slot="icon-only" fill="clear"></ion-icon
+            <ion-button (click)="removeAnswer(ans.id)" slot="end" fill="clear"  color="danger"
+              ><ion-icon name="trash-outline" slot="icon-only" ></ion-icon
             ></ion-button>
           </ion-item>
           <ion-item *ngIf="currentLanguageAnswer === 'en'">
@@ -189,8 +190,8 @@
             </div>
 
             <!-- EDIT THE SAVED ANSWER BUTTON IN ENGLISH-->
-            <ion-button (click)="editSavedAnswer(ans.id)" slot="end">
-              <ion-icon name="create" slot="icon-only"></ion-icon>
+            <ion-button (click)="editSavedAnswer(ans.id)" slot="end" fill="clear" >
+              <ion-icon  name="create-outline" slot="icon-only"></ion-icon>
             </ion-button>
             <!--  -->
             <ion-button (click)="removeAnswer(ans.id)" slot="end"
