--- a/src/app/home/edit-modal/edit-modal.component.html
+++ b/src/app/home/edit-modal/edit-modal.component.html
@@ -3,7 +3,7 @@
     <ion-title class="title" slot="start" class="title">{{
       "reviews-create-questionnaire.edit-question" | translate
     }}</ion-title>
-    <ion-button fill="clear" slot="end" size="large" (click)="closeModal()">
+    <ion-button fill="clear" slot="end" size="large" (click)="closeModal()" title="{{ 'reviews-create-questionnaire.close' | translate }}">
       <ion-icon
         slot="end"
         name="close"
@@ -134,6 +134,7 @@
           </ion-button>
 
           <ion-button
+          title="{{ 'reviews-create-questionnaire.delete-answer-btn' | translate }"}
             *ngIf="!isEdited"
             [disabled]="!answer[currentLanguageAnswer]"
             (click)="addAnswers()"
@@ -168,6 +169,7 @@
 
             <!-- EDIT THE SAVED BUTTON IN GREEK -->
             <ion-button
+            title="{{ 'reviews-create-questionnaire.edit-answer-btn' | translate }}"
               (click)="editSavedAnswer(ans.id)"
               slot="end"
               size="small"
@@ -176,7 +178,7 @@
               <ion-icon name="create-outline" s slot="icon-only"></ion-icon>
             </ion-button>
             <!--  -->
-            <ion-button (click)="removeAnswer(ans.id)" slot="end" fill="clear"  color="danger"
+            <ion-button (click)="removeAnswer(ans.id)" slot="end" fill="clear"  color="danger" title="{{ 'reviews-create-questionnaire.delete-answer-btn' | translate }}"
               ><ion-icon name="trash-outline" slot="icon-only" ></ion-icon
             ></ion-button>
           </ion-item>
@@ -191,11 +193,11 @@
             </div>
 
             <!-- EDIT THE SAVED ANSWER BUTTON IN ENGLISH-->
-            <ion-button (click)="editSavedAnswer(ans.id)" slot="end" fill="clear" >
+            <ion-button (click)="editSavedAnswer(ans.id)" slot="end" fill="clear" title="{{ 'reviews-create-questionnaire.edit-answer-btn' | translate }}" >
               <ion-icon  name="create-outline" slot="icon-only"></ion-icon>
             </ion-button>
             <!--  -->
-            <ion-button (click)="removeAnswer(ans.id)" slot="end"
+            <ion-button (click)="removeAnswer(ans.id)" slot="end" title="{{ 'reviews-create-questionnaire.delete-answer-btn' | translate }}"
               ><ion-icon name="trash" slot="icon-only" fill="clear"></ion-icon
             ></ion-button>
           </ion-item>
