--- a/src/app/home/add-modal/add-modal.component.html
+++ b/src/app/home/add-modal/add-modal.component.html
@@ -5,7 +5,13 @@
         "reviews-create-questionnaire.create-question" | translate
       }}</ion-title
     >
-    <ion-button fill="clear" slot="end" size="large" (click)="closeModal()" title="{{ 'close' | translate }}">
+    <ion-button
+      fill="clear"
+      slot="end"
+      size="large"
+      (click)="closeModal()"
+      title="{{ 'close' | translate }}"
+    >
       <ion-icon
         slot="end"
         name="close"
@@ -147,6 +153,9 @@
 
             <!-- ADD ANSWERS BUTTONS -->
             <ion-button
+              title="{{
+                'reviews-create-questionnaire.add-answer' | translate
+              }}"
               *ngIf="isEdited"
               fill="clear"
               slot="end"
@@ -157,7 +166,9 @@
             </ion-button>
 
             <ion-button
-            title="{{ 'reviews-create-questionnaire.add-answer' | translate }}"
+              title="{{
+                'reviews-create-questionnaire.add-answer' | translate
+              }}"
               *ngIf="!isEdited"
               class="flow"
               [disabled]="!answer[currentLanguageAnswer]"
@@ -191,17 +202,26 @@
 
               <!-- EDIT THE SAVED BUTTON IN GREEK -->
               <ion-button
-              title="{{ 'reviews-create-questionnaire.add-answer' | translate }}"
+                title="{{
+                  'reviews-create-questionnaire.add-answer' | translate
+                }}"
                 (click)="editSavedAnswer(ans.id)"
                 slot="end"
                 size="small"
                 fill="clear"
               >
-                <ion-icon name="create-outline"  slot="icon-only"></ion-icon>
+                <ion-icon name="create-outline" slot="icon-only"></ion-icon>
               </ion-button>
               <!--  -->
-              <ion-button (click)="removeAnswer(ans.id)" slot="end" color="danger" fill="clear" title="{{ 'reviews-create-questionnaire.delete-answer-btn' | translate }}"
-                ><ion-icon name="trash-outline" slot="icon-only" ></ion-icon
+              <ion-button
+                (click)="removeAnswer(ans.id)"
+                slot="end"
+                color="danger"
+                fill="clear"
+                title="{{
+                  'reviews-create-questionnaire.delete-answer-btn' | translate
+                }}"
+                ><ion-icon name="trash-outline" slot="icon-only"></ion-icon
               ></ion-button>
             </ion-item>
 
@@ -217,12 +237,26 @@
 
               <ion-label>{{ ans.text_translations.en }}</ion-label>
               <!-- EDIT THE SAVED ANSWER BUTTON IN ENGLISH-->
-              <ion-button (click)="editSavedAnswer(ans.id)" slot="end">
+              <ion-button
+                (click)="editSavedAnswer(ans.id)"
+                slot="end"
+                title="{{
+                  'reviews-create-questionnaire.save-answers' | translate
+                }}"
+                *ngIf="isEdited"
+              >
                 <ion-icon name="create-outline" slot="icon-only"></ion-icon>
               </ion-button>
               <!--  -->
-              <ion-button (click)="removeAnswer(ans.id)" slot="end" color="danger" fill="clear" title="{{ 'reviews-create-questionnaire.delete-answer-btn' | translate }}"
-                ><ion-icon name="trash-outline" slot="icon-only" ></ion-icon
+              <ion-button
+                (click)="removeAnswer(ans.id)"
+                slot="end"
+                color="danger"
+                fill="clear"
+                title="{{
+                  'reviews-create-questionnaire.delete-answer-btn' | translate
+                }}"
+                ><ion-icon name="trash-outline" slot="icon-only"></ion-icon
               ></ion-button>
             </ion-item>
           </div>
@@ -236,7 +270,12 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-button expand="block" color="primary" (click)="addQuestion()" title="{{ 'reviews-create-questionnaire.save-question' | translate }}">
+        <ion-button
+          expand="block"
+          color="primary"
+          (click)="addQuestion()"
+          title="{{ 'reviews-create-questionnaire.save-question' | translate }}"
+        >
           {{ "reviews-create-questionnaire.save-question" | translate }}
         </ion-button>
       </ion-col>
